[package]
name = "corruption"
version = "0.1.2"
authors = ["rap2hpoutre <raphaelht@gmail.com>"]
license = "MIT"
description = "Undocumented rust web framework"
repository = "https://github.com/rap2hpoutre/corruption"

[dependencies]
hyper = "0.9.10"
mildew="0.1.2"
handlebars = "0.20.5"
rustc-serialize = "0.3.19"
time = "0.1.35"